add secret manager, application yml and fix bugs